feat(stepper): added stepper component

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,11 +1,20 @@
-<link href='https://designsystem.gov.sg/css/sgds.css' rel='stylesheet' type='text/css' />
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel='stylesheet'
-    type='text/css' />
-<script type="module"
-    src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script>
-    <script
-    type="module"
-    id="dev-console-gateway"
-    src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
-  ></script>
-  <script src="../lib/index.js"></script>
+<link
+  href="https://designsystem.gov.sg/css/sgds.css"
+  rel="stylesheet"
+  type="text/css"
+/>
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+  rel="stylesheet"
+  type="text/css"
+/>
+<script
+  type="module"
+  src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"
+></script>
+<script
+  type="module"
+  id="dev-console-gateway"
+  src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
+></script>
+<script src="../lib/index.js"></script>
