feat(alert): added alert component

--- a/index.html
+++ b/index.html
@@ -213,19 +213,19 @@
             <div class="row">
                 <div class="col is-6">
                     <h3>Basic</h3>
-                    <sgds-alert><sl-icon name="info-circle" class="flex-shrink-0 me-4"></sl-icon>This is an Alert component</sgds-alert>
+                    <sgds-alert alertClasses="d-flex align-items-center" dismissible><sl-icon name="info-circle" class="flex-shrink-0 me-4 align-self-start mt-1"></sl-icon><div>This is an Alert component</div></sgds-alert>
 
                     <h3>Links</h3>
-                    <sgds-alert><sl-icon name="info-circle" class="flex-shrink-0 me-4"></sl-icon>
-                        This is a primary alert with&nbsp;<a class="alert-link" href="#">an example link</a>. Give it a click if you like.
+                    <sgds-alert alertClasses="d-flex align-items-center" dismissible><sl-icon name="info-circle" class="flex-shrink-0 me-4 align-self-start mt-1"></sl-icon>
+                        <div> This is a primary alert with&nbsp;<a class="alert-link" href="#">an example link</a>. Give it a click if you like.</div>
                         </sgds-alert>
 
                         <h3>With additional content</h3>
 
-                        <sgds-alert variant="success" alertClasses="d-flex">
-                            <sl-icon name="info-circle" class="flex-shrink-0 me-4"></sl-icon>
-                            <div>
-                              <h4 class="alert-heading">Hey, nice to see you</h4>
+                        <sgds-alert variant="success" alertClasses="d-flex align-items-center" dismissible>
+                            <sl-icon name="info-circle" class="flex-shrink-0 me-4 align-self-start mt-2"></sl-icon>
+                            <div><h4 class="alert-heading">Hey, nice to see you</h4>
+                            
                               <p>
                                 Aww yeah, you successfully read this important alert message. This
                                 example text is going to run a bit longer so that you can see how
