--- a/index.html
+++ b/index.html
@@ -208,6 +208,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <h2>Input</h2>
+            <div class="row">
+                <div class="col is-6">
+                    <sgds-toast></sgds-toast><br>
+                    <sgds-toast bg="warning" status="success" delay="5000" autohide="true"></sgds-toast><br>
+                    <sgds-toast></sgds-toast>
+                    </div></div></div>
         <div class="container">
             <h2>Alert</h2>
             <div class="row">
