feat(alert): added toggleShow method for sgds-button functionality

--- a/index.html
+++ b/index.html
@@ -212,12 +212,11 @@
             <h2>Alert</h2>
             <div class="row">
                 <div class="col is-6">
-                    <h3>Basic</h3>
-                    <sgds-alert alertClasses="d-flex align-items-center" dismissible><sl-icon name="info-circle" class="flex-shrink-0 me-4 align-self-start mt-1"></sl-icon><div>This is an Alert component</div></sgds-alert>
 
                     <h3>Links</h3>
-                    <sgds-alert alertClasses="d-flex align-items-center" dismissible><sl-icon name="info-circle" class="flex-shrink-0 me-4 align-self-start mt-1"></sl-icon>
-                        <div> This is a primary alert with&nbsp;<a class="alert-link" href="#">an example link</a>. Give it a click if you like.</div>
+                    <sgds-alert alertClasses="d-flex align-items-center" dismissible>
+                        <sl-icon name="info-circle" class="flex-shrink-0 me-4 align-self-start mt-1"></sl-icon>
+                        <div> This is a primary alert with&nbsp;<a class="alert-link">an example link</a>. Give it a click if you like.</div>
                         </sgds-alert>
 
                         <h3>With additional content</h3>
