feat(accordion): add accordion

--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
 
     <main>
         <div class="container">
+            <h2>Accordion</h2>
+            <div class="row">
+                <sgds-accordion summary="Toggle Me">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  </sgds-accordion>
+            </div>
+        </div>
+        <div class="container">
             <h2>Button</h2>
             <p>Button size</p>
             <div class="row">
