--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
             <sgds-input id="input002">
             </sgds-input>
           </div> -->
-          <sgds-button stepperId="myStepper" methodType="increment" variant="primary">Next</sgds-button>
-          <sgds-button stepperId="myStepper" methodType="decrement" variant="secondary">Back</sgds-button>
-          <sgds-button stepperId="myStepper" methodType="last" variant="warning">Go to last page</sgds-button>
-          <sgds-button stepperId="myStepper" methodType="first" variant="danger">Go to first page</sgds-button>
+          <sgds-button refId="myStepper" methodType="increment" variant="primary">Next</sgds-button>
+          <sgds-button refId="myStepper" methodType="decrement" variant="secondary">Back</sgds-button>
+          <sgds-button refId="myStepper" methodType="last" variant="warning">Go to last page</sgds-button>
+          <sgds-button refId="myStepper" methodType="first" variant="danger">Go to first page</sgds-button>
         </div>
         <div class="container">
             <h2>Quantity Toggle</h2>
