feat(tooltip): skeletal function figured out

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <sgds-masthead fluid></sgds-masthead>
     
     <div class="grid">
+        <sgds-tooltip>Hello Tooltip</sgds-tooltip>
     <sgds-mainnav>
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
         <sgds-mainnav-item href="#">Home</sgds-mainnav-item>
@@ -374,7 +375,6 @@
     </div>
     <script>
         const submitButton = document.querySelector('sgds-quantitytoggle#heyhey');
-        console.log(submitButton)
         // submitButton.addEventListener('sgds-change', (e) => {
         //     e.preventDefault();
         //     console.log(e)
