docs(table): added sb documentation for sort properties

--- a/index.html
+++ b/index.html
@@ -346,7 +346,16 @@
             <br>
             <h2>Table w/ Sort</h2>
             <div class="row">
-                <sgds-table sort bordered tableHeaders='["#", "First Names", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
+                <sgds-table sort tableHeaders='["#", "First Names", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
+                [2, "Jacob", "Thornton", "@fat"],
+                [3, "Larry", "the Bird", "@twitter"],
+                [4, "Chuck", "Norris", "@asdasdasd"]
+              ]'></sgds-table>
+            </div>
+            <br>
+            <h2>Table w/ RemovableSort</h2>
+            <div class="row">
+                <sgds-table removableSort sort tableHeaders='["#", "First Names", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
                 [2, "Jacob", "Thornton", "@fat"],
                 [3, "Larry", "the Bird", "@twitter"],
                 [4, "Chuck", "Norris", "@asdasdasd"]
