--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- JavaScript Bundle with Popper -->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/@govtechsg/sgds@2.1.1/css/sgds.min.css" rel="stylesheet" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>  -->
+        crossorigin="anonymous"></script> -->
     <script type="module" id="dev-console-gateway"
         src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
@@ -90,7 +90,7 @@
             flex: 1;
         }
     </style>
-    <script src="lib/index.js"></script>
+    <script src="lib/index.js" type="module"></script>
     <script>
         const steps = [
   { title: 1, stepHeader: "Marker title", template: `<p>Step 1 Content</p>` },
@@ -103,12 +103,7 @@
 
 
 <body class="d-flex flex-column min-vh-100">
-    
-    <sgds-masthead fluid></sgds-masthead>
-    <br/>
-    <br/>
-    <br/>   
-    <sgds-tooltip><sgds-button>hover me</sgds-button></sgds-tooltip>
+    <sgds-masthead fluid></sgds-masthead>  
     <div class="grid">
     <sgds-mainnav>
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
@@ -363,7 +358,39 @@
                 [4, "Chuck", "Norris", "@asdasdasd"]
               ]'></sgds-table>
             </div>
-            
+            <div class="container">
+                <h2>Dropdown</h2>
+                <div class="row">
+                    <sgds-dropdown togglerText="Dropdown">
+                        <sgds-dropdown-item>item #1 (argsTable controlled)</sgds-dropdown-item>
+                        <sgds-dropdown-item href="https://google.com">item #2</sgds-dropdown-item>
+                        <sgds-dropdown-item href="#" disabled>
+                          item #3
+                        </sgds-dropdown-item>
+                      </sgds-dropdown>
+                </div>
+            </div>
+            <div class="container">
+                <h2>Tooltip</h2>
+                Hover me
+                    <sgds-tooltip content="This is a tooltip">
+                        <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-info-circle"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+                        />
+                        <path
+                          d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+                        />
+                      </svg>
+                      </sgds-tooltip>
+                </div>
     <script>
         const submitButton = document.querySelector('sgds-quantitytoggle#heyhey');
         // submitButton.addEventListener('sgds-change', (e) => {
