--- a/index.html
+++ b/index.html
@@ -333,6 +333,14 @@
           <sgds-button refId="myStepper" methodType="first" variant="danger">Go to first page</sgds-button>
         </div>
         <div class="container">
+            <h2>File Upload</h2>
+            <div class="row">
+                <div class="col is-6">
+                    <sgds-fileupload id="my-fileupload"><sl-icon name="upload" class="me-2 align-middle"></sl-icon>Choose a File</sgds-fileupload>
+                </div>
+            </div>
+        </div>
+        <div class="container">
             <h2>Quantity Toggle</h2>
             <div class="row">
                 <div class="col is-6">
@@ -377,6 +385,11 @@
 
         // } ;
 
+        const fileUpload = document.querySelector('sgds-fileupload');
+
+        fileUpload.addEventListener('sgds-change', (event) => {
+        console.log('File list changed!', event);
+        });
 
         // grab reference to form
 
