--- a/index.html
+++ b/index.html
@@ -338,26 +338,31 @@
             <h2>Table Default</h2>
             <div class="row">
                     <sgds-table tableHeaders='["#", "First Names", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
-                    [2, "Jacob", "Thornton", "@fat"],
-                    [3, "Larry", "the Bird", "@twitter"],
+                    [2, "Jacob", "12hornton", "@fat"],
+                    [3, "Larry", "@Bird", "@twitter"],
                     [4, "Chuck", "Norris", "@asdasdasd"]
                   ]'></sgds-table>
             </div>
             <br>
+            <h4>I think it will be good to mention what kind of sorting we are using in the docs so the users know how the sorting is done. like javascript Array.sort() method is use , so they will know what to expect if they pass in an arrays of strings that has alphabets and number or maybe if there is symbols
+
+                a use case i can think of is an array of id numbers
+                
+                ["s942090", "s97302", "s89098236492"]</h4>
             <h2>Table w/ Sort</h2>
             <div class="row">
-                <sgds-table sort tableHeaders='["#", "First Names", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
-                [2, "Jacob", "Thornton", "@fat"],
-                [3, "Larry", "the Bird", "@twitter"],
+                <sgds-table sort tableHeaders='["#", "Serial Number", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
+                [2, "Jacob", "12hornton", "@fat"],
+                [3, "Larry", "@Bird", "@twitter"],
                 [4, "Chuck", "Norris", "@asdasdasd"]
               ]'></sgds-table>
             </div>
             <br>
             <h2>Table w/ RemovableSort</h2>
             <div class="row">
-                <sgds-table removableSort sort tableHeaders='["#", "First Names", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
-                [2, "Jacob", "Thornton", "@fat"],
-                [3, "Larry", "the Bird", "@twitter"],
+                <sgds-table removableSort sort tableHeaders='["#", "Serial Number", "Last Name", "Username"]' tableData='[[1, "Mark", "Otto", "@mdo"],
+                [2, "Jacob", "12hornton", "@fat"],
+                [3, "Larry", "@Bird", "@twitter"],
                 [4, "Chuck", "Norris", "@asdasdasd"]
               ]'></sgds-table>
             </div>
