--- a/index.html
+++ b/index.html
@@ -16,14 +16,6 @@
     <script type="module" id="dev-console-gateway"
         src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <script type="module"
-        src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.3.0/dist/components/icon/icon.js"></script>
-
-        <script type="module" data-shoelace="node_modules/@shoelace-style/shoelace/dist">
-            import '@shoelace-style/shoelace/dist/components/icon/icon.js';
-          
-            // <sl-button> is ready to use!
-          </script>
     <style>
         * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -121,6 +113,22 @@
         <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px">
         </dev-console-widget>
     </sgds-mainnav>
+    <sgds-sidenav class="mt-3" id="test-id">
+        <sgds-sidenav-item active>
+            <span slot="title">
+                <sl-icon name="stack"></sl-icon> Title
+            </span>
+            <sgds-sidenav-link href="https://google.com" active>first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+        </sgds-sidenav-item>
+        <sgds-sidenav-item title="Test title 2">
+            <span slot="title">
+                <sl-icon name="stack"></sl-icon> Title
+            </span>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
+            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
 
     
     <sgds-sidenav class="mt-3" id="test-id">
