--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href='node_modules/@govtechsg/sgds/css/sgds.util.css' rel='stylesheet' type='text/css' /> -->
     <link href='node_modules/@govtechsg/sgds/css/sgds.css' rel='stylesheet' type='text/css' />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel='stylesheet'
-        type='text/css' /> -->
-    <!-- JavaScript Bundle with Popper -->
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/@govtechsg/sgds@2.1.1/css/sgds.min.css" rel="stylesheet" crossorigin="anonymous">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script> -->
     <script type="module" id="dev-console-gateway"
         src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <script type="module"
+        src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.3.0/dist/components/icon/icon.js"></script>
     <style>
         * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -113,24 +108,6 @@
         <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px">
         </dev-console-widget>
     </sgds-mainnav>
-    <sgds-sidenav class="mt-3" id="test-id">
-        <sgds-sidenav-item active>
-            <span slot="title">
-                <sl-icon name="stack"></sl-icon> Title
-            </span>
-            <sgds-sidenav-link href="https://google.com" active>first-test</sgds-sidenav-link>
-            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-        </sgds-sidenav-item>
-        <sgds-sidenav-item title="Test title 2">
-            <span slot="title">
-                <sl-icon name="stack"></sl-icon> Title
-            </span>
-            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-            <sgds-sidenav-link href="https://google.com">first-test</sgds-sidenav-link>
-
-    
     <sgds-sidenav class="mt-3" id="test-id">
         <sgds-sidenav-item active>
             <span slot="title">
