chore(fileupload): replaced dispatchEvent with emit method

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
         const fileUpload = document.querySelector('sgds-fileupload');
 
-        fileUpload.addEventListener('sgds-change', (event) => {
+        fileUpload.addEventListener('sgds-files-select', (event) => {
         console.log('File list changed!', event);
         });
 
