chore(*): cleanup wip

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <div class="container">
                 <h2>Tooltip</h2>
                 Hover me
-                    <sgds-tooltip content="This is a tooltip">
+                    <sgds-tooltip content="This is a tooltip" placement="bottom">
                         <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="16"
