refactor(input): implements SgdsFormControl and remove hasFocus

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div class="row">
                 <div class="col-6 mb-2">
                     <form>
-                        <sgds-input name="input1" id="input1" pattern="test" required></sgds-input>
+                        <sgds-input name="input1" id="input1" minlength="5" required></sgds-input>
                         <sgds-checkbox name="cb1" id="cb1" value="lolol">no required<span slot="feedback">You are
                                 required to check this.</span></sgds-checkbox>
                         <sgds-checkbox name="cb2" id="cb2" value="lolol1" required>with required<span
