--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
             <h2>Input</h2>
             <div class="row">
                 <div class="col-6 mb-2">
-                    <form>
-                        <sgds-input name="input1" id="input1" minlength="5" required></sgds-input>
+                    <form novalidate>
+                        <sgds-input name="input1" id="input1" minlength="5" required value="hi" hasFeedback invalidFeedback="Minimum length 5"></sgds-input>
                         <sgds-checkbox name="cb1" id="cb1" value="lolol">no required<span slot="feedback">You are
                                 required to check this.</span></sgds-checkbox>
                         <sgds-checkbox name="cb2" id="cb2" value="lolol1" required>with required<span
