docs(*): remove id from stories

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 </div>
                 <div class="col-6 mb-2">
                     <form>
-                        <sgds-input inputId="test-id" label="label"></sgds-input>
+                        <sgds-input label="label"></sgds-input>
                         <sgds-button type="submit">Submit</sgds-button>
                     </form>
                 </div>
