--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </div>
         <div class="container">
             <h2>Stepper</h2>
-          <sgds-stepper id="myStepper" activeStep="0">
+          <sgds-stepper id="myStepper" activeStep="2" steps='["one", "two", "three"]'>
             <div slot="step-1" class="mb-4"> 
                 <div class="row">
                     <div class="col mb-2">
