--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <div class="container">
                 <h2>Dropdown</h2>
                 <div class="row">
-                    <sgds-dropdown togglerText="Dropdown" menuIsOpen>
+                    <sgds-dropdown togglerText="Dropdown" menuIsOpen noFlip>
                         <sgds-dropdown-item>item #1 (argsTable controlled)</sgds-dropdown-item>
                         <sgds-dropdown-item href="https://google.com">item #2</sgds-dropdown-item>
                         <sgds-dropdown-item href="#" disabled>
