--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
                         />
                       </svg>
                       </sgds-tooltip>
+                      <button onclick="tooltip.show()">click me</button>
                 </div>
     <script>
         const submitButton = document.querySelector('sgds-quantity-toggle#heyhey');
@@ -482,6 +483,8 @@
         // }); 
 
         // } ;
+        const tooltip = document.querySelector('sgds-tooltip');
+        
 
         const fileUpload = document.querySelector('sgds-fileupload');
 
