feat(tooltip): add show method, add data-sgds-tooltip attribute for a11y purpose

--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
                         />
                       </svg>
                       </sgds-tooltip>
+                      <button onclick="tooltip.show()">click me</button>
                 </div>
     <script>
         const submitButton = document.querySelector('sgds-quantity-toggle#heyhey');
@@ -457,6 +458,8 @@
         // }); 
 
         // } ;
+        const tooltip = document.querySelector('sgds-tooltip');
+        
 
         const fileUpload = document.querySelector('sgds-fileupload');
 
