--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         sgds-button {
             flex: 1;
         }
+        sgds-breadcrumb {
+            --sgds-breadcrumb-seperator: ">";
+        }
 
     </style>
     <script src="lib/index.js" type="module"></script>
@@ -95,8 +98,20 @@
 
 
 <body class="d-flex flex-column min-vh-100">
+    <sgds-breadcrumb>
+        <span slot="separator"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slash-square" viewBox="0 0 16 16">
+            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+            <path d="M11.354 4.646a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708l6-6a.5.5 0 0 1 .708 0z"/>
+          </svg></span>
+        <sgds-breadcrumb-item href="https://www.yahoo.com">Home <span slot="separator">*</span></sgds-breadcrumb-item>
+        <sgds-breadcrumb-item href="https://www.google.com">Item 1</sgds-breadcrumb-item>
+        <sgds-breadcrumb-item href="https://www.google.com">Item 2</sgds-breadcrumb-item>
+        <sgds-breadcrumb-item href="https://www.google.com">Item 3</sgds-breadcrumb-item>
+        <sgds-breadcrumb-item href="https://www.google.com" >Last Item</sgds-breadcrumb-item>
+      </sgds-breadcrumb>
     <sgds-masthead fluid></sgds-masthead>  
     <div class="grid">
+      
     <sgds-mainnav>
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
         <sgds-mainnav-item href="#">Home</sgds-mainnav-item>
