--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
     <main>
         <div class="container">
             <h2>Datepicker</h2>
-            <sgds-datepicker initialValue="2022-12-14"></sgds-datepicker>
+            <sgds-datepicker initialValue="2020-12-14"></sgds-datepicker>
+            <sgds-datepicker></sgds-datepicker>
 
 <br><br><br><br><br><br><br><br><br>
             <sgds-datepicker mode="range" dateFormat="YYYY/MM/DD" ></sgds-datepicker>
