feat(alert): add alert-link and header component

--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
                 <div class="col is-6">
 
                     <h3>Links</h3>
-                    <sgds-alert alertClasses="d-flex align-items-center" variant="danger" dismissible>
+                    <sgds-alert alertClasses="d-flex align-items-center" variant="danger" dismissible show>
                         <sl-icon name="info-circle" class="flex-shrink-0 me-4 align-self-start mt-1"></sl-icon>
-                        <div> This is a primary alert with&nbsp;<a class="alert-link">an example link</a>. Give it a click if you like.</div>
+                        <div> This is a primary alert with&nbsp;<sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like.</div>
                         </sgds-alert>
 
                         <h3>With additional content</h3>
