fix(*): change the way components are exported

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,2 @@
-<script
-  type="module"
-  id="dev-console-gateway"
-  src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
-></script>
+<script type="module" id="dev-console-gateway"
+  src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"></script>
