--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@
 
                     <h3>Links</h3>
                     <sgds-alert alertClasses="d-flex align-items-center" variant="danger" dismissible show>
-                        <sl-icon name="info-circle" class="flex-shrink-0 me-4 align-self-start mt-1"></sl-icon>
+                        <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-1-circle-fill" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM9.283 4.002H7.971L6.072 5.385v1.271l1.834-1.318h.065V12h1.312V4.002Z"/>
+                          </svg>
                         <div> This is a primary alert with&nbsp;<sgds-alert-link>an example link</sgds-alert-link>. Give it a click if you like.</div>
                         </sgds-alert>
 
