feat(toast-container): component to position toasts

--- a/index.html
+++ b/index.html
@@ -279,7 +279,11 @@
                           </svg>
                     </sgds-toast><br>
                     <sgds-toast bg="warning" status="success" delay="5000" autohide="true"></sgds-toast><br>
-                    <sgds-toast></sgds-toast>
+                    
+                    <sgds-toast-container position="middle-center">
+                        <sgds-toast title="hello">This is a toast</sgds-toast>
+                        <sgds-toast title="hello">This is a toast</sgds-toast>
+                    </sgds-toast-container>
                     </div></div></div>
         <div class="container">
             <h2>Alert</h2>
