refactor(tab-group): remove placement

--- a/index.html
+++ b/index.html
@@ -319,7 +319,12 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div>
+            <sgds-tab-group>
+                <sgds-tab slot="nav">1</sgds-tab>
+                <sgds-tab slot="nav">2</sgds-tab>
+                <sgds-tab slot="nav">3</sgds-tab>
+            </sgds-tab-group>
             <h2>Stepper</h2>
           <sgds-stepper id="myStepper" activeStep="2" steps='["one", "two", "three"]'>
             <div slot="step-1" class="mb-4"> 
