refactor(tab): refactor style wip

--- a/index.html
+++ b/index.html
@@ -320,7 +320,12 @@
             </div>
         </div>
         <div>
-            <sgds-tab-group>
+            <sgds-tab-group variant="tabs-info-toggle">
+                <sgds-tab slot="nav">1</sgds-tab>
+                <sgds-tab slot="nav">2</sgds-tab>
+                <sgds-tab slot="nav">3</sgds-tab>
+            </sgds-tab-group>
+            <sgds-tab-group variant="tabs-basic-toggle">
                 <sgds-tab slot="nav">1</sgds-tab>
                 <sgds-tab slot="nav">2</sgds-tab>
                 <sgds-tab slot="nav">3</sgds-tab>
