--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- <script type="module" id="dev-console-gateway"
         src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <script type="module" id="console-components-gateway"
-  src="https://dev.assets.developer.tech.gov.sg/console-components/gateway.es5.js" nonce={nonce || undefined}></script>
+    <!-- <script type="module" id="console-components-gateway"
+  src="https://dev.assets.developer.tech.gov.sg/console-components/gateway.es5.js" nonce={nonce || undefined}></script> -->
     <style>
         /* * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -323,9 +323,11 @@
         </div>
         <div>
             <sgds-tab-group variant="tabs-info-toggle">
-                <sgds-tab slot="nav">1</sgds-tab>
-                <sgds-tab slot="nav">2</sgds-tab>
-                <sgds-tab slot="nav">3</sgds-tab>
+                <sgds-tab slot="nav"><svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
+                    <path d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z"/>
+                  </svg><span slot="count">1</span><span slot="label">Apple</span></sgds-tab>
+                <sgds-tab slot="nav"><span slot="count">12</span><span slot="label">Banana</span></sgds-tab>
+                <sgds-tab slot="nav"><sgds-badge slot="count" variant="light" badgeClasses="text-dark">100</sgds-badge><span slot="label">Carrot</span></sgds-tab>
             </sgds-tab-group>
             <sgds-tab-group variant="tabs-basic-toggle">
                 <sgds-tab slot="nav">1</sgds-tab>
