refactor(tab): cleanup

--- a/index.html
+++ b/index.html
@@ -338,12 +338,12 @@
                 <sgds-tab slot="nav">3</sgds-tab>
                 <sgds-tab-panel name="one">hello</sgds-tab-panel>
             </sgds-tab-group>
-            <sgds-tab-group>
+            <sgds-tab-group tabsClasses="mb-3">
                 <sgds-tab slot="nav" panel="one">1</sgds-tab>
                 <sgds-tab slot="nav" panel="two">2</sgds-tab>
                 <sgds-tab slot="nav" panel="three">3</sgds-tab>
-                <sgds-tab-panel name="one">one</sgds-tab-panel>
-                <sgds-tab-panel name="two">two</sgds-tab-panel>
+                <sgds-tab-panel name="one" active>one</sgds-tab-panel>
+                <sgds-tab-panel name="two" >two</sgds-tab-panel>
                 <sgds-tab-panel name="three">three</sgds-tab-panel>
             </sgds-tab-group>
             <h2>Stepper</h2>
