--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     <path d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z"/>
                   </svg><span slot="count">1</span><span slot="label">Apple</span>
                 </sgds-tab>
-                <sgds-tab slot="nav"><span slot="count">12</span><span slot="label">Banana</span></sgds-tab>
+                <sgds-tab active slot="nav"><span slot="count">12</span><span slot="label">Banana</span></sgds-tab>
                 <sgds-tab slot="nav"><sgds-badge slot="count" variant="light" badgeClasses="text-dark">100</sgds-badge><span slot="label">Carrot</span></sgds-tab>
                 
                 <sgds-tab-panel name="one">hello</sgds-tab-panel>
