--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             width: 100%;
         }
         sgds-tab-group::part(body){
-            border: 1px solid red;
+            border: 1px solid blue;
+            border-radius: 2px;
+            margin-top: 100px;
         }
         sgds-sidenav-item {
             --sidenav-theme-color: orange;
