--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- <script type="module" id="dev-console-gateway"
         src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <script type="module" id="console-components-gateway"
-  src="https://dev.assets.developer.tech.gov.sg/console-components/gateway.es5.js" nonce={nonce || undefined}></script>
+    <!-- <script type="module" id="console-components-gateway"
+  src="https://dev.assets.developer.tech.gov.sg/console-components/gateway.es5.js" nonce={nonce || undefined}></script> -->
     <style>
         /* * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -84,7 +84,8 @@
         }
         
     </style>
-    <script src="lib/index.js" type="module"></script>
+    <!-- <script src="lib/index.js" type="module"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/clk-web-components" type="module"></script>
     <script>
         const steps = [
   { title: 1, stepHeader: "Marker title", template: `<p>Step 1 Content</p>` },
