refactor(datepicker): added sgds-change-date event emitter for onload and closebutton

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <main>
         <div class="container">
             <h2>Datepicker</h2>
-            <sgds-datepicker id="myDatepicker" initialValue='["2023-04-15"]'></sgds-datepicker>
+            <sgds-datepicker id="myDatepicker"></sgds-datepicker>
 
 <br><br><br><br><br><br><br><br><br>
             <sgds-datepicker id="myDatepicker2" mode="range" initialValue='["2023-06-22", "2023-06-11"]'></sgds-datepicker>
