style(datepicker): refactor custom props

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             margin-top: 100px;
         }
         sgds-sidenav-item {
-            --sidenav-theme-color: orange;
+            --sidenav-theme-color: green;
         }
 
         sgds-masthead {
@@ -85,6 +85,11 @@
 
         sgds-button {
             flex: 1;
+        }
+
+
+        sgds-datepicker {
+            --datepicker-theme-color: orange;
         }
         
     </style>
