fix(datepicker): initialValue calendar view render

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
     <main>
         <div class="container">
             <h2>Datepicker</h2>
-            <sgds-datepicker id="myDatepicker"  initialValue='["2023-11-11"]'></sgds-datepicker>
+            <sgds-datepicker id="myDatepicker" initialValue='["2023/12/11"]' dateFormat="YYYY/MM/DD"></sgds-datepicker>
 
 <br><br><br><br><br><br><br><br><br>
-            <sgds-datepicker id="myDatepicker2" mode="range" initialValue='["2023/03/10","2023/04/13"]' dateFormat="YYYY/MM/DD"></sgds-datepicker>
+            <sgds-datepicker id="myDatepicker2" mode="range" initialValue='["11/12/2023","11-11-11"]' ></sgds-datepicker>
         </div>
 
         <div class="container">
