--- a/index.html
+++ b/index.html
@@ -148,13 +148,7 @@
 
     <main>
         <div class="container">
-            <sgds-combo-box>
-                <sgds-dropdown-item>item #1 (argsTable controlled)</sgds-dropdown-item>
-                <sgds-dropdown-item href="https://google.com">item #2</sgds-dropdown-item>
-                <sgds-dropdown-item href="#" disabled>
-                  item #3
-                </sgds-dropdown-item>
-            </sgds-combo-box>
+            <sgds-combo-box placeholder='test combo box' menuList='["one", "two"]' />
             <h2>Breadcrumb</h2>
             <sgds-breadcrumb>
                 <span slot="separator"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slash-square" viewBox="0 0 16 16">
