chore(combobox storybook template): create storybook template for combobox

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <main>
         <div class="container">
-            <sgds-combo-box placeholder='test combo box' menuList='["one", "two"]' />
+            <sgds-combo-box placeholder='test combo box' menuList='["one", "two"]' label="label" />
             <h2>Breadcrumb</h2>
             <sgds-breadcrumb>
                 <span slot="separator"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slash-square" viewBox="0 0 16 16">
